# grok-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  windows-release.yml
.sample/: auth-with-pending-oauth.json  auth.json
docs/: index.md  plan-task.md
docs/archive/: README.md  capability-matrix.md  constraints-and-risks.md  grok-skill-routing-plan.md  index.md  oauth-flow.md  rust-cli-design.md  rust-cli-state-schema.md  technical-architecture.md
docs/commands/: chat.md  image-edit.md  image.md  index.md  login.md  logout.md  model.md  refresh.md  search.md  state.md  status.md  stt-stream.md  stt.md  tts.md  update.md  usage.md  video-edit.md  video-extend.md  video.md
docs/guides/: index.md  quickstart.md  release.md  troubleshooting.md
docs/project/: acceptance.md  index.md  parameter-validation-plan.md  pre-release-validation-plan.md  pre-release-validation-results.md  skill-validation-cases.md  (+1 more)
scripts/: package-local-macos-release.sh
skills/: README.md
src/: app.rs  args.rs  cli.rs  error.rs  main.rs  model.rs  output.rs  update.rs  upstream.rs
target-local/: .rustc_info.json
tests/: auth_oauth_commands.rs  contract_regressions.rs  model_commands.rs  state_commands.rs  task_audio_commands.rs  task_chat_commands.rs  task_image_gen_commands.rs  task_video_gen_commands.rs  task_x_search_commands.rs  update_commands.rs  usage_commands.rs
(+121 files in other folders)
