[package]
name = "grok-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "OAuth-first CLI for Grok and xAI capabilities"
license = "MIT"
repository = "https://github.com/moore/grok-cli"
homepage = "https://github.com/moore/grok-cli"
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "form", "multipart", "json", "stream", "http2", "charset", "native-tls"] }
url = "2.5.8"
base64 = "0.22.1"
sha2 = "0.11.0"
rand = "0.10.1"
percent-encoding = "2.3.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
webbrowser = "1.2.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
